@@ -11,6 +11,14 @@ Quickstart
     # Define a library.
     lib = Library('mylib.so')
 
+    # Structures are defined with the help of `structure` decorator
+    @lib.structure
+    class Box:
+
+        one: int
+        two: str
+        innerbox: 'Box'  # That'll be a pointer.
+
     # Type less with function names prefixes.
     with lib.scope(prefix='mylib_'):
 
@@ -19,7 +27,11 @@ Quickstart
         def some_func(title: str, year: int) -> str:
             ...
 
-        with lib.scope(prefix='mylib_grouped_', int_bits=64, int_sign=False):
+        @lib.f  # `f` is a shortcut for function.
+        def struct_func(src: Box) -> Box:
+            ...
+
+        with lib.s(prefix='mylib_grouped_', int_bits=64, int_sign=False):  # `s` is a shortcut for scope.
 
             class Thing(CInt):
 
@@ -29,7 +41,7 @@ Quickstart
                     # with explicitly passed `some` arg.
                     ...
 
-                @lib.method
+                @lib.m  # `m` is a shortcut for method.
                 def two(self, some:int, cfunc: Callable) -> int:
                     # `cfunc` is a wrapper, calling an actual ctypes function.
                     result = cfunc()
@@ -52,9 +64,15 @@ Quickstart
     # Bind ctype types to functions available in the library.
     lib.bind_types()
 
-    # Call function from the library.
-    result_string = some_func('Hello!', 2019)  # Call ``mylib_otherfunc``
+    # Call function from the library. Call ``mylib_otherfunc``
+    result_string = some_func('Hello!', 2019)
     result_wide = Wide.get_utf('some')  # Call ``common_get_utf``
+
+    # Now to structures. Call ``mylib_struct_func``
+    mybox = struct_func(Box(one=35, two='dummy', innerbox=Box(one=100)))
+    # Let's pretend our function returns a box inside a box (similar to what's in the params).
+    mybox.one  # Access box field value.
+    mybox.innerbox.one  # Access values from nested objects.
 
     thing = get_thing()
 
