@@ -4,6 +4,7 @@ ctyped changelog
 
 Unreleased
 ----------
++ Added basic structures support.
 + CRef.carray() constructor now allows shortcuts for bool and float.
 * CObject simplified.
 
